# imc-der

./: .gitignore  CMakeLists.txt  README.md  run.sh  template_option.txt
src/: collisionDetector.cpp  collisionDetector.h  contactPotentialIMC.cpp  contactPotentialIMC.h  eigenIncludes.h  elasticRod.cpp  elasticRod.h  energyplotter.py  generate_functions.py  imc.py  imc_utils.py  initialize_functions.py  main.cpp  pull_force_plot.py  setInput.cpp  setInput.h  symbolicEquations.cpp  symbolicEquations.h  timeStepper.cpp  timeStepper.h  world.cpp  world.h
src/DER/: Makefile  Makefile_Sample_OSX  README.txt  collision.cpp  collision.h  dampingForce.cpp  dampingForce.h  eigenIncludes.h  elasticBendingForce.cpp  elasticBendingForce.h  elasticRod.cpp  elasticRod.h  elasticStretchingForce.cpp  elasticStretchingForce.h  elasticTwistingForce.cpp  elasticTwistingForce.h  externalGravityForce.cpp  externalGravityForce.h  inertialForce.cpp  inertialForce.h  main.cpp  option.txt  setInput.cpp  setInput.h  template_option.txt  timeStepper.cpp  timeStepper.h  world.cpp  world.h
src/DER/knot_configurations/: n1  n1_relaxed  n2  n3  n4  n4_relaxed
